--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,7 @@
 <h4>Welcome to some games.</h4>
 <form action="/hangman" method="post">
-	<input type="submit" value="Start a New Game">
+	<input type="submit" value="Play Hangman">
+</form>
+<form action="/ttt" method="get">
+	<input type="submit" value="Play Tic-Tac-Toe">
 </form>
