Allows user to accept a game and thereby initialize a new game

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,3 +5,12 @@
 <form action="/ttt" method="get">
 	<input type="submit" value="Play Tic-Tac-Toe">
 </form>
+
+<% if current_user %>
+<%= erb :'partials/_invites'%>
+<% end %>
+
+
+
+
+
