Users can now see and access their open games (the ones where the invitee has accepted invitation)

--- a/views/partials/_invites.erb
+++ b/views/partials/_invites.erb
@@ -1,4 +1,9 @@
-<ul class="invites"></ul>
+<div class="six columns">
+	<ul class="invites"></ul>
+</div>
+<div class="six columns offset-by-one">
+	<ul class="current-games"></ul>
+</div>
 
 
 <script>	
