--- a/views/ttt/index.erb
+++ b/views/ttt/index.erb
@@ -3,9 +3,10 @@
 	<input type="text" name="search" id="search">
 </form>
 
-<ul class="user-matches">
-	
-</ul>
+
+<ul class="user-matches"></ul>
+
+
 
 <script>
 	$(function(){
