--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,1 +1,11 @@
-styles.css
+div.ttt-board{
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
+	margin: 5px;
+	margin-bottom: 15px;
+}
+
+div.ttt-board-row{
+	display:inline-block;
+}
