--- a/views/ttt/show.erb
+++ b/views/ttt/show.erb
@@ -1,3 +1,21 @@
 <h1>A Unique Multiplayer Game of Tic Tac Toe</h1>
 <h4>Player 1: <%= @game.player_1.username %></h4>
 <h4>Player 2: <%= @game.player_2.username %></h4>
+
+<div class="ttt-board-row">
+<div class="ttt-board" id="0"></div>
+<div class="ttt-board" id="1"></div>
+<div class="ttt-board" id="2"></div>
+</div>
+
+<div class="ttt-board-row">
+<div class="ttt-board" id="3"></div>
+<div class="ttt-board" id="4"></div>
+<div class="ttt-board" id="5"></div>
+</div>
+
+<div class="ttt-board-row">
+<div class="ttt-board" id="6"></div>
+<div class="ttt-board" id="7"></div>
+<div class="ttt-board" id="8"></div>
+</div>
