Allows board to render in nearly real time while playing game, and allows board state to be saved and revisited

--- a/views/ttt/show.erb
+++ b/views/ttt/show.erb
@@ -25,6 +25,8 @@
 <script>
 $(function(){
 
+	renderCurrentBoard();
+
 	$('div.ttt-board').on('click', function(e){
 		var $spaceId = this.id
 		makeMove($spaceId);
