--- a/views/partials/_invites.erb
+++ b/views/partials/_invites.erb
@@ -2,7 +2,9 @@
 	<ul class="invites"></ul>
 </div>
 <div class="six columns offset-by-one">
-	<ul class="current-games"></ul>
+	<ul class="invites"></ul>
+	<ul class="current-hm-games"></ul>
+	<ul class="current-ttt-games"></ul>
 </div>
 
 
